--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -1,6 +1,54 @@
 {
   "store.product": {
     "children": [
+      "breadcrumb",
+      "flex-layout.row#main"
     ]
+  },
+
+  "flex-layout.row#main": { 
+   "props": { 
+     "marginTop": 6
+   },
+   "children": [
+     "flex-layout.col#left",
+     "flex-layout.col#right"
+   ]
+ },
+
+ "flex-layout.col#left": {
+   "children": [
+     "product-images"
+   ]
+ }
+
+ ,
+
+ "flex-layout.col#right": {
+   "children": [
+     "product-name",
+     "product-identifier.product",
+     "product-price",
+     "flex-layout.row#qty-sku",
+     "buy-button"
+   ],
+   "props": {
+     "verticalAlign": "middle",
+     "preventVerticalStretch": true
+   }
+ },
+
+ "flex-layout.row#qty-sku": {
+  "children": [
+    "sku-selector",
+    "product-quantity"
+  ]
+},
+
+ "product-price": {
+  "props": {
+    "showSavings": true,
+    "showListPrice": true
   }
+}
 }
