--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -41,7 +41,8 @@
  "flex-layout.row#qty-sku": {
   "children": [
     "sku-selector",
-    "product-quantity"
+    "product-quantity",
+    "shipping-simulator"
   ]
 },
 
