--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -30,6 +30,7 @@
      "product-identifier.product",
      "product-price",
      "flex-layout.row#qty-sku",
+     "shipping-simulator",
      "buy-button"
    ],
    "props": {
@@ -41,8 +42,8 @@
  "flex-layout.row#qty-sku": {
   "children": [
     "sku-selector",
-    "product-quantity",
-    "shipping-simulator"
+    "product-quantity"
+    
   ]
 },
 
