--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -66,7 +66,8 @@
 "sku-selector": {
   "props": {
     "initialSelection": "empty",
-    "showVariationsLabels": true
+    "showVariationsLabels": true,
+    "showVariationsErrorMessage": true
   }
 }
 
