--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -66,7 +66,7 @@
 "sku-selector": {
   "props": {
     "initialSelection": "empty",
-    "showVariationsLabels": true,
+    "showValueForVariation": "all",
     "showVariationsErrorMessage": true
   }
 }
