--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -66,7 +66,7 @@
 "sku-selector": {
   "props": {
     "initialSelection": "empty",
-    "showValueForVariation": "all",
+    "showValueNameForImageVariation": true,
     "showVariationsErrorMessage": true
   }
 }
