--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -47,30 +47,30 @@
   },
   "tab-list#home": {
     "children": [
-      "tab-list.item#1",
-      "tab-list.item#2"
+      "tab-list.item#home1",
+      "tab-list.item#home2"
       ]
   },
   "tab-content#home": {
     "children": [
-      "tab-content.item#1",
-      "tab-content.item#2"
+      "tab-content.item#home1",
+      "tab-content.item#home2"
       ]
   },
-  "tab-list.item#1": {
+  "tab-list.item#home1": {
     "props": {
       "tabId": "majorAppliances",
       "label": "Major Appliances",
       "defaultActiveTab": true
     }
   },
-  "tab-list.item#2": {
+  "tab-list.item#home2": {
     "props": {
       "tabId": "electronics",
       "label": "Electronics"
     }
   },
-  "tab-content.item#1": {
+  "tab-content.item#home1": {
     "children": [
       "rich-text#home1"
     ],
@@ -78,7 +78,7 @@
       "tabId": "majorAppliances"
     }
   },
-  "tab-content.item#2": {
+  "tab-content.item#home2": {
     "children": [
       "rich-text#home2"
     ],
