--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -152,8 +152,11 @@
     },
     "vtex.menu@2.x:submenu#small":{
         "children":[
-        "vtex.menu@2.x:menu#small"
-        ]
+            "vtex.menu@2.x:menu#small"
+        ],
+        "props": {
+            "orientation": "vertical"
+        }
     },
     "vtex.menu@2.x:menu#small": {
         "children": [
@@ -162,8 +165,6 @@
             "menu-item#coffee"
         ],
         "props": {
-            "type": "custom",
-            "highlight": true,
             "orientation": "vertical"
         }
     },
