--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -163,7 +163,10 @@
             "menu-item#mixers",
             "menu-item#toasters",
             "menu-item#coffee"
-        ]
+        ],
+        "props": {
+            "orientation": "vertical"
+        }
     },
     "menu-item#mixers": {
         "props": {
