--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -24,7 +24,7 @@
                 "text": "Major Appliances"
             }
         },
-        "children":[
+        "blocks":[
             "vtex.menu@2.x:submenu#major"
         ]
     },
