--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -36,9 +36,38 @@
         "props": {
             "orientation": "vertical"
         }
+    },
+    "vtex.menu@2.x:submenu#small":{
+        "children":[
+            "vtex.menu@2.x:menu#small"
+        ]
+    },
+    "vtex.menu@2.x:menu#small": {
+        "children": [
+            "menu-item#mixers",
+            "menu-item#toasters",
+            "menu-item#coffee"
+        ],
+        "props": {
+            "orientation": "vertical"
+        }
+    },
+
+    "vtex.menu@2.x:submenu#electronics":{
+        "children":[
+        "vtex.menu@2.x:menu#electronics"
+        ]
+    },
+    "vtex.menu@2.x:menu#electronics": {
+        "children": [
+            "menu-item#cameras",
+            "menu-item#laptops",
+            "menu-item#tvs"
+        ],
+        "props": {
+            "orientation": "vertical"
+        }
     }
-
-
 }
 
 
