--- a/store/blocks/menu-flex.jsonc
+++ b/store/blocks/menu-flex.jsonc
@@ -1,5 +1,12 @@
 {
-
+    "vtex.menu@2.x:submenu#major":{
+        "children":[
+        "flex-layout.row#major"
+        ],
+        "props": {
+            "orientation": "vertical"
+        }
+    },
 
     "flex-layout.row#major": {
         "children": [
