--- a/store/blocks/menu-flex.jsonc
+++ b/store/blocks/menu-flex.jsonc
@@ -30,6 +30,28 @@
             "paddingRight": 4,
             "horizontalAlign": "right"
            }
-      }
+      },
+
+      "image#menu": {
+        "props": {
+          "src": "https://appliancetheme.vteximg.com.br/arquivos/menu-washer.jpg",
+          "link": {
+            "url": "/small-appliances/coffee-makers"
+          },
+          "alt": "Coffee Makers Collection",
+          "maxWidth": "200px"
+        }
+      },
+      "rich-text#header": {
+        "props": {
+          "text": "Free Shipping on orders over $50",
+          "textPosition": "LEFT",
+          "textAlignment": "LEFT"
+        }
+    },
+
+
+
+
 
 }
